--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "bootstrap": "^4.6.0",
+    "react-bootstrap": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
